resolve target name conflict

--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -65,7 +65,7 @@ z3_add_component(api
     z3_replayer.cpp
     ${full_path_generated_files}
   COMPONENT_DEPENDENCIES
-    opt
+    z3_opt
     portfolio
     realclosure
     extra_cmds
